--- a/au-config.json
+++ b/au-config.json
@@ -12,7 +12,7 @@
     }],
     "Nodes": [{
             "Core": "hysteria2",
-            "ApiHost": "https://new.shiyuanyinian.xyz",
+            "ApiHost": "https://rep8ph3ny150.syyn.xyz",
             "ApiKey": "yE4ZvHiqQQHdYPdv",
             "NodeID": 76,
             "NodeType": "hysteria2",
@@ -34,7 +34,7 @@
             }
         },{
             "Core": "hysteria2",
-            "ApiHost": "https://new.shiyuanyinian.xyz",
+            "ApiHost": "https://rep8ph3ny150.syyn.xyz",
             "ApiKey": "yE4ZvHiqQQHdYPdv",
             "NodeID": 77,
             "NodeType": "hysteria2",
@@ -56,7 +56,7 @@
             }
         }, {
             "Core": "hysteria2",
-            "ApiHost": "https://new.shiyuanyinian.xyz",
+            "ApiHost": "https://rep8ph3ny150.syyn.xyz",
             "ApiKey": "yE4ZvHiqQQHdYPdv",
             "NodeID": 78,
             "NodeType": "hysteria2",
@@ -78,7 +78,7 @@
             }
         }, {
             "Core": "hysteria2",
-            "ApiHost": "https://new.shiyuanyinian.xyz",
+            "ApiHost": "https://rep8ph3ny150.syyn.xyz",
             "ApiKey": "yE4ZvHiqQQHdYPdv",
             "NodeID": 79,
             "NodeType": "hysteria2",
@@ -100,7 +100,7 @@
             }
         }, {
             "Core": "hysteria2",
-            "ApiHost": "https://new.shiyuanyinian.xyz",
+            "ApiHost": "https://rep8ph3ny150.syyn.xyz",
             "ApiKey": "yE4ZvHiqQQHdYPdv",
             "NodeID": 80,
             "NodeType": "hysteria2",
@@ -122,7 +122,7 @@
             }
         }, {
             "Core": "hysteria2",
-            "ApiHost": "https://new.shiyuanyinian.xyz",
+            "ApiHost": "https://rep8ph3ny150.syyn.xyz",
             "ApiKey": "yE4ZvHiqQQHdYPdv",
             "NodeID": 81,
             "NodeType": "hysteria2",
