--- a/kr-config.json
+++ b/kr-config.json
@@ -21,11 +21,11 @@
             "SendIP": "0.0.0.0",
             "DeviceOnlineMinTraffic": 100,
             "CertConfig": {
-                "CertMode": "http",
+                "CertMode": "file",
                 "RejectUnknownSni": false,
                 "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-                "CertFile": "/etc/V2bX/fullchain.cer",
-                "KeyFile": "/etc/V2bX/cert.key",
+                "CertFile": "/root/1.crt",
+                "KeyFile": "/root/1.key",
                 "Email": "v2bx@github.com",
                 "Provider": "cloudflare",
                 "DNSEnv": {
@@ -43,11 +43,11 @@
             "SendIP": "0.0.0.0",
             "DeviceOnlineMinTraffic": 100,
             "CertConfig": {
-                "CertMode": "http",
+                "CertMode": "file",
                 "RejectUnknownSni": false,
                 "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-                "CertFile": "/etc/V2bX/fullchain.cer",
-                "KeyFile": "/etc/V2bX/cert.key",
+                "CertFile": "/root/1.crt",
+                "KeyFile": "/root/1.key",
                 "Email": "v2bx@github.com",
                 "Provider": "cloudflare",
                 "DNSEnv": {
@@ -65,11 +65,11 @@
             "SendIP": "0.0.0.0",
             "DeviceOnlineMinTraffic": 100,
             "CertConfig": {
-                "CertMode": "http",
+                "CertMode": "file",
                 "RejectUnknownSni": false,
                 "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-                "CertFile": "/etc/V2bX/fullchain.cer",
-                "KeyFile": "/etc/V2bX/cert.key",
+                "CertFile": "/root/1.crt",
+                "KeyFile": "/root/1.key",
                 "Email": "v2bx@github.com",
                 "Provider": "cloudflare",
                 "DNSEnv": {
@@ -87,11 +87,11 @@
             "SendIP": "0.0.0.0",
             "DeviceOnlineMinTraffic": 100,
             "CertConfig": {
-                "CertMode": "http",
+                "CertMode": "file",
                 "RejectUnknownSni": false,
                 "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-                "CertFile": "/etc/V2bX/fullchain.cer",
-                "KeyFile": "/etc/V2bX/cert.key",
+                "CertFile": "/root/1.crt",
+                "KeyFile": "/root/1.key",
                 "Email": "v2bx@github.com",
                 "Provider": "cloudflare",
                 "DNSEnv": {
@@ -109,11 +109,11 @@
             "SendIP": "0.0.0.0",
             "DeviceOnlineMinTraffic": 100,
             "CertConfig": {
-                "CertMode": "http",
+                "CertMode": "file",
                 "RejectUnknownSni": false,
                 "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-                "CertFile": "/etc/V2bX/fullchain.cer",
-                "KeyFile": "/etc/V2bX/cert.key",
+                "CertFile": "/root/1.crt",
+                "KeyFile": "/root/1.key",
                 "Email": "v2bx@github.com",
                 "Provider": "cloudflare",
                 "DNSEnv": {
@@ -131,11 +131,11 @@
             "SendIP": "0.0.0.0",
             "DeviceOnlineMinTraffic": 100,
             "CertConfig": {
-                "CertMode": "http",
+                "CertMode": "file",
                 "RejectUnknownSni": false,
                 "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-                "CertFile": "/etc/V2bX/fullchain.cer",
-                "KeyFile": "/etc/V2bX/cert.key",
+                "CertFile": "/root/1.crt",
+                "KeyFile": "/root/1.key",
                 "Email": "v2bx@github.com",
                 "Provider": "cloudflare",
                 "DNSEnv": {
@@ -153,11 +153,11 @@
     "SendIP": "0.0.0.0",
     "DeviceOnlineMinTraffic": 100,
     "CertConfig": {
-        "CertMode": "http",
+        "CertMode": "file",
         "RejectUnknownSni": false,
         "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-        "CertFile": "/etc/V2bX/fullchain.cer",
-        "KeyFile": "/etc/V2bX/cert.key",
+        "CertFile": "/root/1.crt",
+        "KeyFile": "/root/1.key",
         "Email": "v2bx@github.com",
         "Provider": "cloudflare",
         "DNSEnv": {
@@ -175,11 +175,11 @@
     "SendIP": "0.0.0.0",
     "DeviceOnlineMinTraffic": 100,
     "CertConfig": {
-        "CertMode": "http",
+        "CertMode": "file",
         "RejectUnknownSni": false,
         "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-        "CertFile": "/etc/V2bX/fullchain.cer",
-        "KeyFile": "/etc/V2bX/cert.key",
+        "CertFile": "/root/1.crt",
+        "KeyFile": "/root/1.key",
         "Email": "v2bx@github.com",
         "Provider": "cloudflare",
         "DNSEnv": {
@@ -197,11 +197,11 @@
     "SendIP": "0.0.0.0",
     "DeviceOnlineMinTraffic": 100,
     "CertConfig": {
-        "CertMode": "http",
+        "CertMode": "file",
         "RejectUnknownSni": false,
         "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-        "CertFile": "/etc/V2bX/fullchain.cer",
-        "KeyFile": "/etc/V2bX/cert.key",
+        "CertFile": "/root/1.crt",
+        "KeyFile": "/root/1.key",
         "Email": "v2bx@github.com",
         "Provider": "cloudflare",
         "DNSEnv": {
@@ -219,11 +219,11 @@
     "SendIP": "0.0.0.0",
     "DeviceOnlineMinTraffic": 100,
     "CertConfig": {
-        "CertMode": "http",
+        "CertMode": "file",
         "RejectUnknownSni": false,
         "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-        "CertFile": "/etc/V2bX/fullchain.cer",
-        "KeyFile": "/etc/V2bX/cert.key",
+        "CertFile": "/root/1.crt",
+        "KeyFile": "/root/1.key",
         "Email": "v2bx@github.com",
         "Provider": "cloudflare",
         "DNSEnv": {
@@ -241,11 +241,11 @@
     "SendIP": "0.0.0.0",
     "DeviceOnlineMinTraffic": 100,
     "CertConfig": {
-        "CertMode": "http",
+        "CertMode": "file",
         "RejectUnknownSni": false,
         "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-        "CertFile": "/etc/V2bX/fullchain.cer",
-        "KeyFile": "/etc/V2bX/cert.key",
+        "CertFile": "/root/1.crt",
+        "KeyFile": "/root/1.key",
         "Email": "v2bx@github.com",
         "Provider": "cloudflare",
         "DNSEnv": {
@@ -263,11 +263,11 @@
     "SendIP": "0.0.0.0",
     "DeviceOnlineMinTraffic": 100,
     "CertConfig": {
-        "CertMode": "http",
+        "CertMode": "file",
         "RejectUnknownSni": false,
         "CertDomain": "hy-kr-l4ehusajhz18.fly64jfgwhale.xyz",
-        "CertFile": "/etc/V2bX/fullchain.cer",
-        "KeyFile": "/etc/V2bX/cert.key",
+        "CertFile": "/root/1.crt",
+        "KeyFile": "/root/1.key",
         "Email": "v2bx@github.com",
         "Provider": "cloudflare",
         "DNSEnv": {
